--- a/NTierSardırımRes.MVC/Areas/Admin/Views/Product/Delete.cshtml
+++ b/NTierSardırımRes.MVC/Areas/Admin/Views/Product/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ProductDeleteVM
 @{
     ViewData["Title"] = "Delete";
-    Layout = "~/Areas/Admin/Views/Product/Index.cshtml";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 
@@ -31,7 +31,7 @@
         </dd>
     </dl>
     <form asp-action="Delete" method="post">
-        <input type="hidden" asp-for="Id" />
+        <input type="hidden" asp-for="ID" />
         <button type="submit" class="btn btn-danger">Delete</button> |
         <a asp-action="Index">Back to List</a>
     </form>
