--- a/NTierSardırımRes.MVC/Areas/Admin/Views/Product/Update.cshtml
+++ b/NTierSardırımRes.MVC/Areas/Admin/Views/Product/Update.cshtml
@@ -1,14 +1,14 @@
-﻿
-@model ProductUpdateVM
+﻿@model ProductUpdateVM
+
 @{
     ViewData["Title"] = "Update";
-    Layout = "~/Areas/Admin/Views/Product/Index.cshtml";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 <h1>Update Product</h1>
 
 <form asp-action="Update" method="post">
-    <input type="hidden" asp-for="Id" />
+    <input type="hidden" asp-for="ID" />
     <div class="form-group">
         <label asp-for="ProductName"></label>
         <input asp-for="ProductName" class="form-control" />
