--- a/NTierSardırımRes.MVC/Areas/Admin/Views/Home/Index.cshtml
+++ b/NTierSardırımRes.MVC/Areas/Admin/Views/Home/Index.cshtml
@@ -82,10 +82,10 @@
                     <li class="dropdown">
                         <a href="#"><span>Hizmetler</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
-                            <li class="nav-item"> <a asp-controller="Product" asp-action="Index" class="nav-link"> <p> Products </p> </a> </li>
-                            <li class="nav-item"> <a asp-controller="" asp-action="Index" class="nav-link"> <p>  </p> </a> </li>
-                            <li class="nav-item"> <a asp-controller="Product" asp-action="Index" class="nav-link"> <p> Products </p> </a> </li>
-                            <li class="nav-item"> <a asp-controller="Product" asp-action="Index" class="nav-link"> <p> Products </p> </a> </li>
+                            <li class="nav-item"> <a asp-controller="Product"  asp-action="Index" class="nav-link"> <p> Products </p> </a> </li>
+                            <li class="nav-item"> <a asp-controller="Customer" asp-action="Index" class="nav-link"> <p> Customer </p> </a> </li>
+                            <li class="nav-item"> <a asp-controller="Product"  asp-action="Index" class="nav-link"> <p> Products </p> </a> </li>
+                            <li class="nav-item"> <a asp-controller="Product"  asp-action="Index" class="nav-link"> <p> Products </p> </a> </li>
                         </ul>
                     </li>
                 </ul>
