--- a/NTierSardırımRes.MVC/Areas/Admin/Views/_ViewImports.cshtml
+++ b/NTierSardırımRes.MVC/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using NTierSardırımRes.Entities.Entities
 @using NTierSardırımRes.MVC.Models.ViewModels
 @using NTierSardırımRes.MVC.Models.ViewModels.ProductViewModel
+@using NTierSardırımRes.MVC.Models.ViewModels.CustomerVİewModel
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
