--- a/NTierSardırımRes.MVC/Areas/Admin/Views/_ViewImports.cshtml
+++ b/NTierSardırımRes.MVC/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,6 +1,5 @@
 ﻿@using NTierSardırımRes.Entities.Entities
 @using NTierSardırımRes.MVC.Models.ViewModels
 @using NTierSardırımRes.MVC.Models.ViewModels.ProductViewModel
-@using NTierSardırımRes.MVC.Models.ViewModels.CustomerVİewModel
-
+@using NTierSardırımRes.MVC.Models.ViewModels.CustomerViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
