--- a/NTierSardırımRes.MVC/Areas/Admin/Views/Product/Index.cshtml
+++ b/NTierSardırımRes.MVC/Areas/Admin/Views/Product/Index.cshtml
@@ -5,6 +5,10 @@
     ViewData["Title"] = "Ürünler";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
+<h1>Ürünler</h1>
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
 
 <!-- Ürünlerin listelendiği tablo -->
 <table class="table">
