--- a/NTierSardırımRes.MVC/Areas/Admin/Views/_ViewImports.cshtml
+++ b/NTierSardırımRes.MVC/Areas/Admin/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using NTierSardırımRes.MVC.Models.ViewModels
 @using NTierSardırımRes.MVC.Models.ViewModels.ProductViewModel
 @using NTierSardırımRes.MVC.Models.ViewModels.CustomerViewModel
+@using NTierSardırımRes.MVC.Models.ViewModels.IngredientViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
