--- a/NTierSardırımRes.MVC/Areas/Admin/Views/Customer/Index.cshtml
+++ b/NTierSardırımRes.MVC/Areas/Admin/Views/Customer/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<Customer>
+﻿@using NTierSardırımRes.Entities.Enums;
+@model List<Customer>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
@@ -25,8 +26,10 @@
             <th>Telefon</th>
             <th></th>
         </tr>
+
     </thead>
     <tbody>
+
         @foreach (var customer in Model)
         {
             <tr>
@@ -37,7 +40,22 @@
                 <td>@customer.Adress</td>
                 <td>@customer.Email</td>
                 <td>@customer.Phone</td>
+                <td>
 
+                    @if (customer.Status == DataStatus.Inserted)
+                    {
+                        <span style="color: blue;">Inserted</span>
+                    }
+                    else if (customer.Status == DataStatus.Updated)
+                    {
+                        <span style="color: green;">Updated</span>
+                    }
+                    else if (customer.Status == DataStatus.Deleted)
+                    {
+                        <span style="color: red;">Deleted</span>
+                    }
+
+                </td>
                 <td>
                     <!-- Güncelleme butonu -->
 
