--- a/NTierSardırımRes.MVC/Areas/Admin/Views/Home/Index.cshtml
+++ b/NTierSardırımRes.MVC/Areas/Admin/Views/Home/Index.cshtml
@@ -82,10 +82,12 @@
                     <li class="dropdown">
                         <a href="#"><span>Hizmetler</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
-                            <li class="nav-item"> <a asp-controller="Product"  asp-action="Index" class="nav-link"> <p> Products </p> </a> </li>
+                            <li class="nav-item"> <a asp-controller="Product"  asp-action="Index" class="nav-link"> <p> Product </p> </a> </li>
                             <li class="nav-item"> <a asp-controller="Customer" asp-action="Index" class="nav-link"> <p> Customer </p> </a> </li>
-                            <li class="nav-item"> <a asp-controller="Product"  asp-action="Index" class="nav-link"> <p> Products </p> </a> </li>
-                            <li class="nav-item"> <a asp-controller="Product"  asp-action="Index" class="nav-link"> <p> Products </p> </a> </li>
+                            <li class="nav-item"> <a asp-controller="Ingredient"  asp-action="Index" class="nav-link"> <p> Ingredient </p> </a> </li>
+                            <li class="nav-item"> <a asp-controller="Table"  asp-action="Index" class="nav-link"> <p> Table </p> </a> </li>
+                            <li class="nav-item"> <a asp-controller="Reservation" asp-action="Index" class="nav-link"> <p> Reservation </p> </a> </li>
+                            <li class="nav-item"> <a asp-controller="Order" asp-action="Index" class="nav-link"> <p> Order </p> </a> </li>
                         </ul>
                     </li>
                 </ul>
