--- a/NTierSardırımRes.MVC/Areas/Admin/Views/_ViewImports.cshtml
+++ b/NTierSardırımRes.MVC/Areas/Admin/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using NTierSardırımRes.MVC.Models.ViewModels.ProductViewModel
 @using NTierSardırımRes.MVC.Models.ViewModels.CustomerViewModel
 @using NTierSardırımRes.MVC.Models.ViewModels.IngredientViewModel
+@using NTierSardırımRes.MVC.Models.ViewModels.TableViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
