--- a/NTierSardırımRes.MVC/Areas/Admin/Views/_ViewImports.cshtml
+++ b/NTierSardırımRes.MVC/Areas/Admin/Views/_ViewImports.cshtml
@@ -4,4 +4,5 @@
 @using NTierSardırımRes.MVC.Models.ViewModels.CustomerViewModel
 @using NTierSardırımRes.MVC.Models.ViewModels.IngredientViewModel
 @using NTierSardırımRes.MVC.Models.ViewModels.TableViewModel
+@using NTierSardırımRes.MVC.Models.ViewModels.ReservationViewModel;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
