--- a/NTierSardırımRes.MVC/Areas/Admin/Views/_ViewImports.cshtml
+++ b/NTierSardırımRes.MVC/Areas/Admin/Views/_ViewImports.cshtml
@@ -5,4 +5,5 @@
 @using NTierSardırımRes.MVC.Models.ViewModels.IngredientViewModel
 @using NTierSardırımRes.MVC.Models.ViewModels.TableViewModel
 @using NTierSardırımRes.MVC.Models.ViewModels.ReservationViewModel;
+@using NTierSardırımRes.MVC.Models.ViewModels.OrderViewModel;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
