Login, Register ve ForgotPassword işlemleri

--- a/NTierSardırımRes.MVC/Views/_ViewImports.cshtml
+++ b/NTierSardırımRes.MVC/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using NTierSardırımRes.MVC
 @using NTierSardırımRes.MVC.Models
-
+@using NTierSardırımRes.MVC.Models.ViewModels.LoginViewModel
+@using NTierSardırımRes.MVC.Models.ViewModels.RegisterViewModel
+@using NTierSardırımRes.MVC.Models.ViewModels.ForgotPasswordViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
