--- a/NTierSardırımRes.MVC/Areas/Admin/Views/Home/Index.cshtml
+++ b/NTierSardırımRes.MVC/Areas/Admin/Views/Home/Index.cshtml
@@ -50,13 +50,7 @@
 
             <div class="contact-info d-flex align-items-center">
                 <i class="bi bi-phone d-flex align-items-center"><span>+90 216 585 35 53</span></i>
-                <i class="bi bi-clock d-flex align-items-center ms-4"><span> Pazartesi - Salı : 11:00 - 24:00</span></i>
-            </div>
-
-            <div class="languages d-none d-md-flex align-items-center">
-                <ul>
-                    <li>Tr</li>
-                </ul>
+                <i class="bi bi-clock d-flex align-items-center ms-4"><span> Pazartesi - Pazar : 11:00 - 24:00</span></i>
             </div>
         </div>
     </div>
