--- a/NTierSardırımRes.MVC/Areas/Admin/Views/_ViewImports.cshtml
+++ b/NTierSardırımRes.MVC/Areas/Admin/Views/_ViewImports.cshtml
@@ -6,4 +6,5 @@
 @using NTierSardırımRes.MVC.Models.ViewModels.TableViewModel
 @using NTierSardırımRes.MVC.Models.ViewModels.ReservationViewModel;
 @using NTierSardırımRes.MVC.Models.ViewModels.OrderViewModel;
+@using NTierSardırımRes.MVC.Models.ViewModels.LoginViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
