ProfileController ve VM işlemleri

--- a/NTierSardırımRes.MVC/Views/Account/ResetPassword.cshtml
+++ b/NTierSardırımRes.MVC/Views/Account/ResetPassword.cshtml
@@ -1,14 +1,14 @@
-﻿@model ForgotPasswordVM
-
+﻿@model ResetPasswordVM
 @{
-    ViewData["Title"] = "Şifremi Unuttum";
+    ViewData["Title"] = "ResetPassword";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 
 <div class="col-md-4 mx-auto">
     <div class="card card-primary">
         <div class="card-header">
-            <h3 class="card-title">Şifremi Unuttum</h3>
+            <h3 class="card-title">Şifreyi Sıfırla</h3>
         </div>
         <!-- /.card-header -->
         <!-- form start -->
