--- a/NTierSardırımRes.MVC/Views/Shared/_Layout.cshtml
+++ b/NTierSardırımRes.MVC/Views/Shared/_Layout.cshtml
@@ -25,29 +25,23 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                    </ul>
+                        </ul>
                     <ul class="navbar-nav ms-auto">
-                        @if (User.Identity.IsAuthenticated)
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Profile">@User.Identity.Name</a>
-                            </li>
-                            <li class="nav-item">
-                                <form method="post" asp-controller="Account" asp-action="Logout">
-                                    <button type="submit" class="btn btn-link nav-link text-dark">Çıkış Yap</button>
-                                </form>
-                            </li>
-                        }
-                        else
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link" asp-action="Register" asp-controller="Account">Hesap Oluştur</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" asp-action="Login" asp-controller="Account">Giriş</a>
-                            </li>
-                        }
+                        <li class="nav-item">
+                            <a class="nav-link" asp-action="Register" asp-controller="Account">Hesap Oluştur</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-action="Login" asp-controller="Account">Giriş</a>
+                        </li>
+                       
                     </ul>
+                   
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <form asp-controller="Account" asp-action="Logout" method="post" class="form-inline">
+                            <button type="submit" class="btn btn-link">Çıkış Yap</button>
+                        </form>
+                    }
 
                 </div>
             </div>
