--- a/NTierSardırımRes.MVC/Views/_ViewImports.cshtml
+++ b/NTierSardırımRes.MVC/Views/_ViewImports.cshtml
@@ -3,4 +3,6 @@
 @using NTierSardırımRes.MVC.Models.ViewModels.LoginViewModel
 @using NTierSardırımRes.MVC.Models.ViewModels.RegisterViewModel
 @using NTierSardırımRes.MVC.Models.ViewModels.ForgotPasswordViewModel
+@using NTierSardırımRes.MVC.Models.ViewModels.ResetPasswordViemModel
+@using NTierSardırımRes.MVC.Models.ViewModels.ProfileViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
