--- a/NTierSardırımRes.MVC/Areas/Admin/Views/Home/Index.cshtml
+++ b/NTierSardırımRes.MVC/Areas/Admin/Views/Home/Index.cshtml
@@ -68,8 +68,8 @@
                     <li><a class="nav-link scrollto active" href="#hero">Anasayfa</a></li>
                     <li><a class="nav-link scrollto" href="#about">Hakkımızdda</a></li>
                     <li><a class="nav-link scrollto" href="#menu">Menu</a></li>
-                    <li><a class="nav-link scrollto" href="#specials">Özel Menuler</a></li>
-                    <li><a class="nav-link scrollto" href="#events">Davetler</a></li>
+                    @* <li><a class="nav-link scrollto" href="#specials">Özel Menuler</a></li>
+                    <li><a class="nav-link scrollto" href="#events">Davetler</a></li> *@
                     <li><a class="nav-link scrollto" href="#chefs">Şefler</a></li>
                     <li><a class="nav-link scrollto" href="#gallery">Galeri</a></li>
                     <li><a class="nav-link scrollto" href="#contact">İletişim</a></li>
@@ -88,7 +88,12 @@
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav><!-- .navbar -->
             <a href="#book-a-table" class="book-a-table-btn scrollto d-none d-lg-flex">Rezervasyon</a>
-
+            <li class="nav-item">
+                <a class="nav-link" asp-action="Register" asp-controller="Account">Hesap Oluştur</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" asp-action="Login" asp-controller="Account">Giriş</a>
+            </li>
         </div>
     </header><!-- End Header -->
     <!-- ======= Hero Section ======= -->
