--- a/NTierSardırımRes.MVC/Views/Account/Login.cshtml
+++ b/NTierSardırımRes.MVC/Views/Account/Login.cshtml
@@ -12,13 +12,13 @@
         <!-- /.card-header -->
         <!-- form start -->
         <form asp-controller="Account" asp-action="Login" method="post">
-            <div asp-validation-summary="All"></div>
+            <div asp-validation-summary="All" class="text-danger"></div>
             <div class="card-body">
                 <div class="form-group">
                     <label asp-for="Email"></label>
                     <input asp-for="Email" type="email" class="form-control" placeholder="Email adresi girin">
+                    <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
-
                 <div class="form-group">
                     <label asp-for="Password"></label>
                     <div class="input-group">
