--- a/NTierSardırımRes.MVC/Views/Account/Register.cshtml
+++ b/NTierSardırımRes.MVC/Views/Account/Register.cshtml
@@ -7,43 +7,55 @@
 <div class="col-md-4 mx-auto">
     <div class="card card-primary">
         <div class="card-header">
-            <h3 class="card-title">Hesap Oluştur</h3>
+            <h3 class="card-title">Kayıt Ol</h3>
         </div>
         <!-- /.card-header -->
         <!-- form start -->
         <form asp-controller="Account" asp-action="Register" method="post">
-            <div asp-validation-summary="All"></div>
+            <div asp-validation-summary="All" class="text-danger"></div>
             <div class="card-body">
                 <div class="form-group">
-                    <label asp-for="Username"></label>
-                    <input asp-for="Username" class="form-control" placeholder="Kullanıcı adı">
-                    <span asp-validation-for="Username" class="text-danger"></span>
+                    <label asp-for="CustomerName"></label>
+                    <input asp-for="CustomerName" class="form-control" />
+                    <span asp-validation-for="CustomerName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="CustomerSurname"></label>
+                    <input asp-for="CustomerSurname" class="form-control" />
+                    <span asp-validation-for="CustomerSurname" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="UserName"></label>
+                    <input asp-for="UserName" class="form-control" />
+                    <span asp-validation-for="UserName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Password"></label>
+                    <input asp-for="Password" type="password" class="form-control" />
+                    <span asp-validation-for="Password" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="PasswordConfirmed"></label>
+                    <input asp-for="PasswordConfirmed" type="password" class="form-control" />
+                    <span asp-validation-for="PasswordConfirmed" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Email"></label>
-                    <input asp-for="Email" type="email" class="form-control" placeholder="Email adresi girin">
+                    <input asp-for="Email" type="email" class="form-control" />
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
-
                 <div class="form-group">
-                    <label asp-for="Password"></label>
-                    <input asp-for="Password" type="password" class="form-control" placeholder="Şifre girin">
-                    <span asp-validation-for="Password" class="text-danger"></span>
-                </div>
-
-                <div class="form-group">
-                    <label asp-for="ConfirmPassword"></label>
-                    <input asp-for="ConfirmPassword" type="password" class="form-control" placeholder="Şifreyi doğrulayın">
-                    <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                    <label asp-for="PhoneNumber"></label>
+                    <input asp-for="PhoneNumber" class="form-control" />
+                    <span asp-validation-for="PhoneNumber" class="text-danger"></span>
                 </div>
             </div>
             <!-- /.card-body -->
 
             <div class="card-footer">
                 <button type="submit" class="btn btn-primary">Kayıt Ol</button>
+                <a href="@Url.Action("Login", "Account")" class="btn btn-link">Giriş Yap</a>
             </div>
         </form>
     </div>
 </div>
-
-
