Login ve Register İşlemleri Tamamlandı

--- a/NTierSardırımRes.MVC/Views/Shared/_Layout.cshtml
+++ b/NTierSardırımRes.MVC/Views/Shared/_Layout.cshtml
@@ -1,4 +1,11 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+@using Microsoft.AspNetCore.Authentication
+@using NTierSardırımRes.Entities.Entities;
+
+@inject SignInManager<AppUser> SignInManager
+@inject UserManager<AppUser> UserManager
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -27,19 +34,27 @@
                         </li>
                     </ul>
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" asp-action="Register" asp-controller="Home">Hesap Oluştur</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-action="Login" asp-controller="Home">Giriş</a>
-                        </li>
+                        @if (SignInManager.IsSignedIn(User))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Home" asp-action="LoggedInPage">@UserManager.GetUserName(User)</a>
+                            </li>
+                            <li class="nav-item">
+                                <form id="logoutForm" asp-controller="Account" asp-action="Logout" method="post" class="form-inline">
+                                    <button type="submit" class="nav-link btn btn-link text-dark">Çıkış Yap</button>
+                                </form>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-action="Register" asp-controller="Account">Hesap Oluştur</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-action="Login" asp-controller="Account">Giriş</a>
+                            </li>
+                        }
                     </ul>
-                    @if (User.Identity.IsAuthenticated)
-                    {
-                        <form asp-controller="Account" asp-action="Logout" method="post" class="form-inline">
-                            <button type="submit" class="btn btn-link">Çıkış Yap</button>
-                        </form>
-                    }
                 </div>
             </div>
         </nav>
@@ -49,6 +64,7 @@
             @RenderBody()
         </main>
     </div>
+
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2024 - NTierSardırımRes.MVC - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
@@ -60,4 +76,3 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
-
