--- a/NTierSardırımRes.MVC/Areas/Admin/Views/_ViewImports.cshtml
+++ b/NTierSardırımRes.MVC/Areas/Admin/Views/_ViewImports.cshtml
@@ -7,4 +7,5 @@
 @using NTierSardırımRes.MVC.Models.ViewModels.ReservationViewModel;
 @using NTierSardırımRes.MVC.Models.ViewModels.OrderViewModel;
 @using NTierSardırımRes.MVC.Models.ViewModels.LoginViewModel
+@using NTierSardırımRes.MVC.Models.ViewModels.LoginViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
