--- a/NTierSardırımRes.MVC/Views/_ViewImports.cshtml
+++ b/NTierSardırımRes.MVC/Views/_ViewImports.cshtml
@@ -4,4 +4,13 @@
 @using NTierSardırımRes.MVC.Models.ViewModels.RegisterViewModel
 @using NTierSardırımRes.MVC.Models.ViewModels.ForgotPasswordViewModel
 @using NTierSardırımRes.MVC.Models.ViewModels.ResetPasswordViemModel
+@using NTierSardırımRes.Entities.Entities
+@using NTierSardırımRes.MVC.Models.ViewModels
+@using NTierSardırımRes.MVC.Models.ViewModels.ProductViewModel
+@using NTierSardırımRes.MVC.Models.ViewModels.CustomerViewModel
+@using NTierSardırımRes.MVC.Models.ViewModels.IngredientViewModel
+@using NTierSardırımRes.MVC.Models.ViewModels.TableViewModel
+@using NTierSardırımRes.MVC.Models.ViewModels.ReservationViewModel;
+@using NTierSardırımRes.MVC.Models.ViewModels.OrderViewModel;
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
