--- a/NTierSardırımRes.MVC/Views/Home/Index.cshtml
+++ b/NTierSardırımRes.MVC/Views/Home/Index.cshtml
@@ -75,12 +75,13 @@
                     <li class="dropdown">
                         <a href="#"><span>Hizmetler</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
-                            <li class="nav-item"><a asp-controller="Product" asp-action="Index" class="nav-link"><p>Ürünler</p></a></li>
-                            <li class="nav-item"><a asp-controller="Customer" asp-action="Index" class="nav-link"><p>Müşteriler</p></a></li>
-                            <li class="nav-item"><a asp-controller="Ingredient" asp-action="Index" class="nav-link"><p>İçerikler</p></a></li>
-                            <li class="nav-item"><a asp-controller="Table" asp-action="Index" class="nav-link"><p>Masalar</p></a></li>
-                            <li class="nav-item"><a asp-controller="Reservation" asp-action="Index" class="nav-link"><p>Rezervasyonlar</p></a></li>
-                            <li class="nav-item"><a asp-controller="Order" asp-action="Index" class="nav-link"><p>Siparişler</p></a></li>
+                      
+                            <li class="nav-item"><a asp-area="Admin" asp-controller="Product" asp-action="Index" class="nav-link"><p>Ürünler</p></a></li>
+                            <li class="nav-item"><a asp-area ="Admin" asp-controller="Customer" asp-action="Index" class="nav-link"><p>Müşteriler</p></a></li>
+                            <li class="nav-item"><a asp-area="Admin" asp-controller="Ingredient" asp-action="Index" class="nav-link"><p>İçerikler</p></a></li>
+                            <li class="nav-item"><a asp-area="Admin" asp-controller="Table" asp-action="Index" class="nav-link"><p>Masalar</p></a></li>
+                            <li class="nav-item"><a asp-area="Admin" asp-controller="Reservation" asp-action="Index" class="nav-link"><p>Rezervasyonlar</p></a></li>
+                            <li class="nav-item"><a asp-area="Admin" asp-controller="Order" asp-action="Index" class="nav-link"><p>Siparişler</p></a></li>
                         </ul>
 
                     </li>
