--- a/NTierSardırımRes.MVC/Areas/Admin/Views/Product/Index.cshtml
+++ b/NTierSardırımRes.MVC/Areas/Admin/Views/Product/Index.cshtml
@@ -5,78 +5,66 @@
     ViewData["Title"] = "Ürünler";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
+
 <h1>Ürünler</h1>
 
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
 
-<!-- Ürünlerin listelendiği tablo -->
-<table class="table">
-    <thead>
-        <tr>
-            <th>ID</th>
-            <th>Ürün Adı</th>
-            <th>Birim Fiyatı</th>
-            <th>Açıklama</th>
-            <th>Durum</th>
-            <th></th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var product in Model)
-        {
+    <!-- Ürünlerin listelendiği tablo -->
+    <table class="table">
+        <thead>
             <tr>
-                
-                <td>@product.ID</td>
-                <td>@product.ProductName</td>
-                <td>@product.UnitPrice</td>
-                <td>@product.Description</td>
-                <td>
-
-                    @if (product.Status == DataStatus.Inserted)
-                    {
-                        <span style="color: blue;">Inserted</span>
-                    }
-                    else if (product.Status == DataStatus.Updated)
-                    {
-                        <span style="color: green;">Updated</span>
-                    }
-                    else if (product.Status == DataStatus.Deleted)
-                    {
-                        <span style="color: red;">Deleted</span>
-                    }
-
-                </td>
-                <td>
-                    <!-- Güncelleme butonu -->
-                   
-                    <a asp-controller="Product" asp-action="Update" asp-route-id="@product.ID" class="btn btn-primary">Güncelle</a>
-                </td>
-
-                <td>
-                    <!-- Silme butonu -->
-
-                    <a asp-controller="Product" asp-action="Delete" asp-route-id="@product.ID" class="btn btn-danger">Sil</a>
-
-                </td>
-                <td>
-                    <!-- Ürün oluşturma butonu -->
-
-                    <form asp-controller="Product" asp-action="Create" method="post">
-                        <input type="hidden" name="id" value="@product.ID" />
-                        <button type="submit" class="btn btn-success">Oluştur</button>
-                    </form>
-                </td>
+                <th>ID</th>
+                <th>Ürün Adı</th>
+                <th>Birim Fiyatı</th>
+                <th>Açıklama</th>
+                <th>Durum</th>
+                <th></th>
+                <th></th>
+                <th></th>
             </tr>
-        }
-    </tbody>
-</table>
-
-
-
-
-
-
-
-
-
+        </thead>
+        <tbody>
+            @foreach (var product in Model)
+            {
+                <tr>
+                    <td>@product.ID</td>
+                    <td>@product.ProductName</td>
+                    <td>@product.UnitPrice</td>
+                    <td>@product.Description</td>
+                    <td>
+                        @if (product.Status == DataStatus.Inserted)
+                        {
+                            <span style="color: blue;">Inserted</span>
+                        }
+                        else if (product.Status == DataStatus.Updated)
+                        {
+                            <span style="color: green;">Updated</span>
+                        }
+                        else if (product.Status == DataStatus.Deleted)
+                        {
+                            <span style="color: red;">Deleted</span>
+                        }
+                    </td>
+                    <td>
+                        <!-- Güncelleme butonu -->
+                        <a asp-controller="Product" asp-action="Update" asp-route-id="@product.ID" class="btn btn-primary">Güncelle</a>
+                    </td>
+                    <td>
+                        <!-- Silme butonu -->
+                        <a asp-controller="Product" asp-action="Delete" asp-route-id="@product.ID" class="btn btn-danger">Sil</a>
+                    </td>
+                    <td>
+                        <!-- Ürün oluşturma butonu -->
+                        <form asp-controller="Product" asp-action="Create" method="post">
+                            <input type="hidden" name="id" value="@product.ID" />
+                            <button type="submit" class="btn btn-success">Oluştur</button>
+                        </form>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 
