--- a/NTierSardırımRes.MVC/Areas/Admin/Views/_ViewImports.cshtml
+++ b/NTierSardırımRes.MVC/Areas/Admin/Views/_ViewImports.cshtml
@@ -6,6 +6,8 @@
 @using NTierSardırımRes.MVC.Models.ViewModels.TableViewModel
 @using NTierSardırımRes.MVC.Models.ViewModels.ReservationViewModel;
 @using NTierSardırımRes.MVC.Models.ViewModels.OrderViewModel;
-@using NTierSardırımRes.MVC.Models.ViewModels.LoginViewModel
-
+@using NTierSardırımRes.MVC.Models.ViewModels.AppUserViewModel
+@using NTierSardırımRes.MVC.Models.ViewModels.LoginViewModel;
+@using NTierSardırımRes.MVC.Models.ViewModels.AppRoleViewModel;
+@using NTierSardırımRes.MVC.Models.ViewModels.AdminViewModel;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
