--- a/NTierSardırımRes.MVC/Views/Account/Register.cshtml
+++ b/NTierSardırımRes.MVC/Views/Account/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿@model RegisterVM
 @{
-    ViewData["Title"] = "Kayıt Ol";
+    ViewData["Title"] = "Register";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -34,6 +34,15 @@
                     <input asp-for="Email" type="email" class="form-control" />
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
+                <div class="form-group">
+                    <label asp-for="Role">Rol</label>
+                    <select asp-for="Role" class="form-control">
+                        <option value="User">Kullanıcı</option>
+                        <option value="Admin">Yönetici</option>
+                        <!-- İsterseniz diğer rolleri de buraya ekleyebilirsiniz -->
+                    </select>
+                    <span asp-validation-for="Role" class="text-danger"></span>
+                </div>
             </div>
             <!-- /.card-body -->
 
@@ -44,5 +53,3 @@
         </form>
     </div>
 </div>
-
-
