--- a/NTierSardırımRes.MVC/Views/Home/Index.cshtml
+++ b/NTierSardırımRes.MVC/Views/Home/Index.cshtml
@@ -55,8 +55,6 @@
             </div>
         </div>
     </div>
-
-    <!-- ======= Header ======= -->
     <header id="header" class="fixed-top d-flex align-items-center">
         <div class="container-fluid container-xl d-flex align-items-center justify-content-lg-between">
 
@@ -71,30 +69,31 @@
                     <li><a class="nav-link scrollto" href="#menu">Menu</a></li>
                     <li><a class="nav-link scrollto" href="#chefs">Şefler</a></li>
                     <li><a class="nav-link scrollto" href="#gallery">Galeri</a></li>
-                    <li><a class="nav-link scrollto" href="#contact">İletişim</a></li>
-                    <li class="dropdown">
-                        <a href="#"><span>Hizmetler</span> <i class="bi bi-chevron-down"></i></a>
-                        <ul>
-                      
-                            <li class="nav-item"><a asp-area="Admin" asp-controller="Product" asp-action="Index" class="nav-link"><p>Ürünler</p></a></li>
-                            <li class="nav-item"><a asp-area ="Admin" asp-controller="Customer" asp-action="Index" class="nav-link"><p>Müşteriler</p></a></li>
-                            <li class="nav-item"><a asp-area="Admin" asp-controller="Ingredient" asp-action="Index" class="nav-link"><p>İçerikler</p></a></li>
-                            <li class="nav-item"><a asp-area="Admin" asp-controller="Table" asp-action="Index" class="nav-link"><p>Masalar</p></a></li>
-                            <li class="nav-item"><a asp-area="Admin" asp-controller="Reservation" asp-action="Index" class="nav-link"><p>Rezervasyonlar</p></a></li>
-                            <li class="nav-item"><a asp-area="Admin" asp-controller="Order" asp-action="Index" class="nav-link"><p>Siparişler</p></a></li>
-                        </ul>
-
-                    </li>
+                 
+                        <li class="dropdown">
+                            <a href="#"><span>Hizmetler</span> <i class="bi bi-chevron-down"></i></a>
+                            <ul>
+                                <li><a asp-area="Admin" asp-controller="Product" asp-action="Index" class="nav-link">Ürünler</a></li>
+                                <li><a asp-area="Admin" asp-controller="Customer" asp-action="Index" class="nav-link">Müşteriler</a></li>
+                                <li><a asp-area="Admin" asp-controller="Ingredient" asp-action="Index" class="nav-link">İçerikler</a></li>
+                                <li><a asp-area="Admin" asp-controller="Table" asp-action="Index" class="nav-link">Masalar</a></li>
+                                <li><a asp-area="Admin" asp-controller="Reservation" asp-action="Index" class="nav-link">Rezervasyonlar</a></li>
+                                <li><a asp-area="Admin" asp-controller="Order" asp-action="Index" class="nav-link">Siparişler</a></li>
+                                <li><a asp-area="Admin" asp-controller="User" asp-action="Index" class="nav-link">Kullanıcılar</a></li>
+                                <li><a asp-area="Admin" asp-controller="AppRole" asp-action="Index" class="nav-link">Roller</a></li>
+                            </ul>
+                        </li>
+                  
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav><!-- .navbar -->
             <a href="#book-a-table" class="book-a-table-btn scrollto d-none d-lg-flex">Rezervasyon</a>
-            <a href="@Url.Action("Login", "Account")" class="membership-btn scrollto d-none d-lg-flex">Üye Girişi</a>
-
-
+            <a href="@Url.Action("Login", "Account")" class="membership-btn scrollto d-none d-lg-flex">Giriş yap</a>
+            
         </div>
     </header>
-    <!-- End Header -->
+
+   
     <!-- ======= Hero Section ======= -->
     <section id="hero" class="d-flex align-items-center">
         <div class="container position-relative text-center text-lg-start" data-aos="zoom-in" data-aos-delay="100">
