--- a/NTierSardırımRes.MVC/Views/_ViewImports.cshtml
+++ b/NTierSardırımRes.MVC/Views/_ViewImports.cshtml
@@ -1,6 +1,6 @@
 ﻿@using NTierSardırımRes.MVC
 @using NTierSardırımRes.MVC.Models
-@using NTierSardırımRes.MVC.Models.ViewModels.LoginViewModel
+@using NTierSardırımRes.MVC.Models.ViewModels.AppUserViewModel
 @using NTierSardırımRes.MVC.Models.ViewModels.RegisterViewModel
 @using NTierSardırımRes.MVC.Models.ViewModels.ForgotPasswordViewModel
 @using NTierSardırımRes.MVC.Models.ViewModels.ResetPasswordViemModel
@@ -12,5 +12,6 @@
 @using NTierSardırımRes.MVC.Models.ViewModels.TableViewModel
 @using NTierSardırımRes.MVC.Models.ViewModels.ReservationViewModel;
 @using NTierSardırımRes.MVC.Models.ViewModels.OrderViewModel;
-
+@using NTierSardırımRes.MVC.Models.ViewModels.LoginViewModel;
+@using NTierSardırımRes.MVC.Models.ViewModels.AdminViewModel;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
